--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 		 <div class="contact_info">
                             <div class="detail">
                                 <h4>E-mail</h4>
-                                <p>Udipto2000@gmail.com</p>
+                                <p>Udipto.Chowdhury@jjay.cuny.edu</p>
                             </div> 
                         </div>
   
