--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
     <div class="row centered">
       
       <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/team01.jpg" height="120px" width="120px" alt="">
-        <div class="rt-box"><h4><strong>Wilmer Udama</strong></h4>
+        <div class="rt-box"><h4><strong>Mr.Wilmer Udama</strong></h4>
         <p>...While in class, he understood complex subjects. Such as, Cryptography, network protocols, apply new concepts during the semester. Also, he was humble and maintained a positive attitude during class. Additionally, he demonstrated attention to detail, neatness, and professionalism in his class work, making it a pleasure to review his assignments.</p><br/>
 		</div>
        </div>
