--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 									<ul class="about-us-list">
 										<li class="points">I graduated from Townsend Harris with Advanced Regents Diploma </li>
 										<li class="points">I worked with Macguyver Tech as a Project Intern </li>
-										<li class="points">Came to the US on March 23rd 2009 </li>
+										<li class="points">Came to the US as a 9 year old </li>
 										<li class="points">I have volunteered with Habitat for Humanity and Food Bank for New York City </li>
 									</ul><!-- /.about-us-list -->
 								 
