--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 	  <div class="row">
 						<div class="col-lg-12 about-us">
 							<div class="row">
-							<div class="col-md-6"> <img class="img-responsive" src="img/about.png" align=""> </div><!-- /.col-md-6 -->
+							<div class="col-md-6"> <img class="img-responsive" src="img/PXL_20220511_174323746.jpg" align=""> </div><!-- /.col-md-6 -->
 								<div class="col-md-6">
                   
 									<h3>I am a Future Cybersecurity Specialist</h3>
