--- a/index.html
+++ b/index.html
@@ -185,19 +185,19 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
           <h5>All</h5>
           </a></li>
         <li><a class="" href="#" data-filter=".761">
-          <h5>FCM 761</h5>
+          <h5>FCM 761: Cyber Risk Assessment & Management</h5>
           </a></li>
         <li><a class="" href="#" data-filter=".230">
-          <h5>ANT 230</h5>
+          <h5>ANT 230: Culture & Crime</h5>
           </a></li>
         <li><a class="" href="#" data-filter=".401">
-          <h5>CSCI 401</h5>
+          <h5>CSCI 401: Capstone Experience in Digital Forensics/Cybersecurity II</h5>
           </a></li>
         <li><a class="" href="#" data-filter=".374">
-          <h5>CSCI 374</h5>
+          <h5>CSCI 374: Programming Languages</h5>
           </a></li>
         <li><a class="" href="#" data-filter=".727">
-          <h5>FCM 727</h5>
+          <h5>FCM 727: Cybercriminology</h5>
           </a></li>
       </ul>
     </div>
