--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 			  <li><a href="#Portfolio" class="scroll-link">Publications</a></li>
 			  <li><a href="#clients" class="scroll-link">Experience</a></li>
 			  <li><a href="#team" class="scroll-link">Testimonial</a></li>
-			  <li><a href="#contact" class="scroll-link">Connect</a></li>
+			  <li><a href="#contact" class="scroll-link">Get In Touch</a></li>
 			</ul>
       </div>
 	 </nav>
@@ -137,7 +137,7 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
           <div class="service_block">
             
             <h3 class="animated fadeInUp wow">Helpful</h3>
-            <p class="animated fadeInDown wow">I like to help others as well as learning new things that are useful  </p>
+            <p class="animated fadeInDown wow">I like to help others as well as learn new things that are useful  </p>
           </div>
         </div>
 		  <div class="col-md-3">
