--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 			  <li><a href="#Portfolio" class="scroll-link">Publications</a></li>
 			  <li><a href="#clients" class="scroll-link">Experience</a></li>
 			  <li><a href="#team" class="scroll-link">Testimonial</a></li>
-			  <li><a href="#contact" class="scroll-link">Get In Touch</a></li>
+			  <li><a href="#connect" class="scroll-link">Get In Touch</a></li>
 			</ul>
       </div>
 	 </nav>
@@ -375,13 +375,13 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
     <div class="row centered">
       
       <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/team01.jpg" height="120px" width="120px" alt="">
-        <div class="rt-box"><h4><strong>Mr.Wilmer Udama</strong></h4>
+        <div class="rt-box"><h4><strong>Mr. Wilmer Udama</strong></h4>
         <p>...While in class, he understood complex subjects. Such as, Cryptography, network protocols, apply new concepts during the semester. Also, he was humble and maintained a positive attitude during class. Additionally, he demonstrated attention to detail, neatness, and professionalism in his class work, making it a pleasure to review his assignments.</p><br/>
 		</div>
        </div>
-         <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/team02.jpg" height="120px" width="120px" alt="">
-        <div class="rt-box"><h4><strong>Nissy Yukjk</strong></h4>
-        <p>Lorem ipsum dolor sit amet, consectetur Morbi sagittis, sem quisci ipsum gravida tortor.</p><br/>
+         <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/team01.jpg" height="120px" width="120px" alt="">
+        <div class="rt-box"><h4><strong>Mr. Douglas Salane</strong></h4>
+        <p>The site is very impressive.  The visuals are appearing and lead you easily to the information.</p><br/>
 		</div>
        </div>
 	      <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/team03.jpg" height="120px" width="120px" alt="">
@@ -403,16 +403,16 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 </section>
 <!--/Team-->
 <!--Footer-->
-<footer class="footer_wrapper" id="contact">
+<footer class="footer_wrapper" id="connect">
   <div class="container">
-    <section class="page_section contact" id="contact">
-      <div class="contact_section">
+    <section class="page_section connect" id="connect">
+      <div class="connect_section">
         <h2>Get In Touch</h2>
 	<h6>Please feel free to get in touch!</h6>
       </div>
       <div class="row">
         <div class="col-lg-4 wow fadeInLeft">	
-		 <div class="contact_info">
+		 <div class="connect_info">
                             <div class="detail">
                                 <h4>E-mail</h4>
                                 <p>Udipto.Chowdhury@jjay.cuny.edu</p>
