--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 			  <li><a href="#Portfolio" class="scroll-link">Publications</a></li>
 			  <li><a href="#clients" class="scroll-link">Experience</a></li>
 			  <li><a href="#team" class="scroll-link">Testimonial</a></li>
-			  <li><a href="#connect" class="scroll-link">Get In Touch</a></li>
+			  <li><a href="#contact" class="scroll-link">Get In Touch</a></li>
 			</ul>
       </div>
 	 </nav>
@@ -73,7 +73,7 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 </header>
 <!--Header_section--> 
 
-<section id="aboutMe"><!--Aboutus-->
+<section id="aboutMe"><!--AboutMe-->
 <div class="inner_wrapper aboutMe-container fadeInLeft animated wow">
   <div class="container">
     <h2><br/>Who Am I?</h2>
@@ -107,7 +107,7 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
   </div> 
   </div>
 </section>
-<!--Aboutus--> 
+<!--AboutMe--> 
 
 
 <!--Service-->
@@ -403,16 +403,16 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 </section>
 <!--/Team-->
 <!--Footer-->
-<footer class="footer_wrapper" id="connect">
+<footer class="footer_wrapper" id="contact">
   <div class="container">
-    <section class="page_section connect" id="connect">
-      <div class="connect_section">
+    <section class="page_section contact" id="contact">
+      <div class="contact_section">
         <h2>Get In Touch</h2>
 	<h6>Please feel free to get in touch!</h6>
       </div>
       <div class="row">
         <div class="col-lg-4 wow fadeInLeft">	
-		 <div class="connect_info">
+		 <div class="contact_info">
                             <div class="detail">
                                 <h4>E-mail</h4>
                                 <p>Udipto.Chowdhury@jjay.cuny.edu</p>
