--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 <div class="inner_wrapper aboutMe-container fadeInLeft animated wow">
   <div class="container">
     <h2><br/>Who Am I?</h2>
-	<h6>I am a current John Jay College Graduate Student who is majoring in Digital Forensics and Cybersecurity</h6>
+	<h6><font color="green">I am a current John Jay College Graduate Student who is majoring in Digital Forensics and Cybersecurity </font></h6>
     <div class="inner_section"> 
 	  <div class="row">
 						<div class="col-lg-12 about-us">
