--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                     As a former participant of the CUNY Tech Talent Pipeline Program, I developed Web Development and Web Moderating skills. A cosmopolitan at heart and an aspiring adventurer, I was born in Chittagong, Bangladesh, and grew up in New York, United States. After graduating from Townsend Harris High School, I decided to attend John Jay College (JJC) because I aspire to be a cyber-security professional and prevent cybercrime. Some of my strengths include being curious, accountable, and resilient. As I look forward to expanding my horizon and applying lessons learned in classrooms in real-life scenarios, my career aspiration will continue to lie in utilizing cyber-security to serve people around the world whether in the financial sector, preventing cyberattacks, or in the government sector, fighting cyberterrorism.
 									</font> </p>
 
-									<ul class="about-us-list"> <font color="#000000">
-										<li class="points">I graduated from Townsend Harris with Advanced Regents Diploma </li>
-										<li class="points">I worked with Macguyver Tech as a Project Intern </li>
-										<li class="points">Came to the US as a 9 year old </li>
-										<li class="points">I have volunteered with Habitat for Humanity and Food Bank for New York City </li>
-									</font> </ul> <!-- /.about-us-list -->
+									<ul class="about-us-list"> 
+										<li class="points"> <font color="#000000"> I graduated from Townsend Harris with Advanced Regents Diploma </font> </li>
+										<li class="points"> <font color="#000000"> I worked with Macguyver Tech as a Project Intern </font> </li>
+										<li class="points"> <font color="#000000"> Came to the US as a 9 year old </font> </li>
+										<li class="points"> <font color="#000000"> I have volunteered with Habitat for Humanity and Food Bank for New York City </font> </li>
+									</ul> <!-- /.about-us-list -->
 								 
 								</div><!-- /.col-md-6 -->
 								
