--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 <section  id="service">
   <div class="container">
     <h2> <font color="#FFC000"> Skills </font> </h2>
-	<h6> <font color="#FFC000"> Some of my skills include.. </font> </h6>
+	<h6> Some of my skills include... </h6>
     <div class="service_wrapper">
       <div class="row">
         <div class="col-md-3">
