--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
     
     <!-- Title -->
     <div class="section-title">
-      <h2>Publications</h2>
-	<h6>These are my publications during my undergraduate and graduate studies</h6>
+      <h2> <font color="#228B22"> Publications </font> </h2>
+	<h6> <font color="#228B22"> These are my publications during my undergraduate and graduate studies </font> </h6>
 	  
     </div>
     <!--/Title --> 
