--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
     <!-- Title -->
     <div class="section-title">
       <h2> <font color="#228B22"> Publications </font> </h2>
-	<h6> <font color="#228B22"> These are my publications during my undergraduate and graduate studies </font> </h6>
+	<h6> <font color="#000000"> These are my publications during my undergraduate and graduate studies </font> </h6>
 	  
     </div>
     <!--/Title --> 
