--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 <!--/Portfolio --> 
 
 <section class="page_section" id="clients"><!--page_section-->
-  <h2>Specialized in...</h2>
+  <h2> <font color="#000080"> Specialized in... </font> </h2>
 <!--page_section-->
 <div class="client_logos"><!--client_logos-->
   <div class="container">
