--- a/index.html
+++ b/index.html
@@ -368,14 +368,14 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 
 <section class="page_section team" id="team"><!--main-section team-start-->
   <div class="container">
-    <h2>Testimonials</h2>
+    <h2> <font color="#7B0323"> Testimonials </font> </h2>
 	  	
 		<div id="team" name="team">
   <div class="container">
     <div class="row centered">
       
       <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/team01.jpg" height="120px" width="120px" alt="">
-        <div class="rt-box"><h4><strong>Mr. Wilmer Udama</strong></h4>
+        <div class="rt-box"><h4><strong><font color="#000000"> Mr. Wilmer Udama </font></strong></h4>
         <p>...While in class, he understood complex subjects. Such as, Cryptography, network protocols, apply new concepts during the semester. Also, he was humble and maintained a positive attitude during class. Additionally, he demonstrated attention to detail, neatness, and professionalism in his class work, making it a pleasure to review his assignments.</p><br/>
 		</div>
        </div>
@@ -408,7 +408,7 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
     <section class="page_section contact" id="contact">
       <div class="contact_section">
         <h2>Get In Touch</h2>
-	<h6>Please feel free to get in touch!</h6>
+	<h6> <font color="#7B0323">Please feel free to get in touch! </font> </h6>
       </div>
       <div class="row">
         <div class="col-lg-4 wow fadeInLeft">	
