--- a/index.html
+++ b/index.html
@@ -374,14 +374,14 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
   <div class="container">
     <div class="row centered">
       
-      <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/team01.jpg" height="120px" width="120px" alt="">
+      	<div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/team01.jpg" height="120px" width="120px" alt="">
         <div class="rt-box"><h4><strong><font color="#000000"> Mr. Wilmer Udama </font></strong></h4>
-        <p>...While in class, he understood complex subjects. Such as, Cryptography, network protocols, apply new concepts during the semester. Also, he was humble and maintained a positive attitude during class. Additionally, he demonstrated attention to detail, neatness, and professionalism in his class work, making it a pleasure to review his assignments.</p><br/>
+        <p><font color="#A9A9A9">...While in class, he understood complex subjects. Such as, Cryptography, network protocols, apply new concepts during the semester. Also, he was humble and maintained a positive attitude during class. Additionally, he demonstrated attention to detail, neatness, and professionalism in his class work, making it a pleasure to review his assignments.</font></p><br/>
 		</div>
        </div>
-         <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/team01.jpg" height="120px" width="120px" alt="">
-        <div class="rt-box"><h4><strong>Mr. Douglas Salane</strong></h4>
-        <p>The site is very impressive.  The visuals are appearing and lead you easily to the information.</p><br/>
+        <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/team01.jpg" height="120px" width="120px" alt="">
+        <div class="rt-box"><h4><strong><font color="#000000">Mr. Douglas Salane</font></strong></h4>
+        <p><font color="#A9A9A9">The site is very impressive.  The visuals are appearing and lead you easily to the information.</font></p><br/>
 		</div>
        </div>
 	      <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/team03.jpg" height="120px" width="120px" alt="">
@@ -408,13 +408,13 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
     <section class="page_section contact" id="contact">
       <div class="contact_section">
         <h2>Get In Touch</h2>
-	<h6> <font color="#7B0323">Please feel free to get in touch! </font> </h6>
+	<h6><font color="#F4BB44">Please feel free to get in touch! </font></h6>
       </div>
       <div class="row">
         <div class="col-lg-4 wow fadeInLeft">	
 		 <div class="contact_info">
                             <div class="detail">
-                                <h4>E-mail</h4>
+                                <h4><font color="#F4BB44">E-mail</font></h4>
                                 <p>Udipto.Chowdhury@jjay.cuny.edu</p>
                             </div> 
                         </div>
