--- a/index.html
+++ b/index.html
@@ -376,12 +376,12 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
       
       	<div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/team01.jpg" height="120px" width="120px" alt="">
         <div class="rt-box"><h4><strong><font color="#000000"> Mr. Wilmer Udama </font></strong></h4>
-        <p><font color="#A9A9A9">...While in class, he understood complex subjects. Such as, Cryptography, network protocols, apply new concepts during the semester. Also, he was humble and maintained a positive attitude during class. Additionally, he demonstrated attention to detail, neatness, and professionalism in his class work, making it a pleasure to review his assignments.</font></p><br/>
+        <p><font color="#222222">...While in class, he understood complex subjects. Such as, Cryptography, network protocols, apply new concepts during the semester. Also, he was humble and maintained a positive attitude during class. Additionally, he demonstrated attention to detail, neatness, and professionalism in his class work, making it a pleasure to review his assignments.</font></p><br/>
 		</div>
        </div>
         <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/team01.jpg" height="120px" width="120px" alt="">
         <div class="rt-box"><h4><strong><font color="#000000">Mr. Douglas Salane</font></strong></h4>
-        <p><font color="#A9A9A9">The site is very impressive.  The visuals are appearing and lead you easily to the information.</font></p><br/>
+        <p><font color="#222222">The site is very impressive.  The visuals are appearing and lead you easily to the information.</font></p><br/>
 		</div>
        </div>
 	      <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/team03.jpg" height="120px" width="120px" alt="">
