--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             <li class="linkedin animated bounceIn wow delay-02s"><a href="https://www.linkedin.com/in/udipto2000/"><i class="fa fa-linkedin"></i></a></li>
           </ul>
           <ul class="resume">
-            <li class="paper-plane animated bounceIn wow fa-1.5x delay-03s"><a href="Udipto Chowdhury Resume-2024.pdf"><i class="fa fa-paper-plane"></i></a></li> 
+            <li class="note-sticky animated bounceIn wow fa-2x delay-03s"><a href="Udipto Chowdhury Resume-2024.pdf"><i class="fa-solid fa-note-sticky"></i>"></i></a></li> 
           </ul>
         </div>
       </div>
