--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             <li class="linkedin animated bounceIn wow delay-02s"><a href="https://www.linkedin.com/in/udipto2000/"><i class="fa fa-linkedin"></i></a></li>
           </ul>
           <ul class="resume">
-            <li class="user-plus animated bounceIn wow delay-03s"><a href="Udipto Chowdhury Resume-2024.pdf"><i class="fa-solid fa-user-plus"></i></a></li> 
+            <li class="user-plus animated bounceIn wow delay-03s"><a href="Udipto Chowdhury Resume-2024.pdf"><i class="fa fa-user-plus"></i></a></li> 
           </ul>
         </div>
       </div>
