--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
        </div>
         <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/team01.jpg" height="120px" width="120px" alt="">
         <div class="rt-box"><h4><strong><font color="#000000">Mr. Douglas Salane</font></strong></h4>
-        <p><font color="#222222">The site is very impressive.  The visuals are appearing and lead you easily to the information.</font></p><br/>
+        <p><font color="#222222">The site is very impressive.  The visuals are appealing and lead you easily to the information.</font></p><br/>
 		</div>
        </div>
 	      <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/team03.jpg" height="120px" width="120px" alt="">
