--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 			  <li class="active"><a href="#hero_section" class="scroll-link">Home</a></li>
 			  <li><a href="#aboutMe" class="scroll-link">About Me</a></li>
 			  <li><a href="#service" class="scroll-link">Skills</a></li>
-			  <li><a href="#Portfolio" class="scroll-link">Publications</a></li>
-			  <li><a href="#clients" class="scroll-link">Experience</a></li>
+			  <li><a href="#portfolio" class="scroll-link">Publications</a></li>
+			  <li><a href="#experience" class="scroll-link">Specialty</a></li>
 			  <li><a href="#team" class="scroll-link">Testimonial</a></li>
 			  <li><a href="#contact" class="scroll-link">Get In Touch</a></li>
 			</ul>
@@ -87,7 +87,7 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                   
 									<h3> <font color="#880808"> I am a Future Cybersecurity Specialist </font> </h3>
 									<p> <font color="#000000">
-                    As a former participant of the CUNY Tech Talent Pipeline Program, I developed Web Development and Web Moderating skills. A cosmopolitan at heart and an aspiring adventurer, I was born in Chittagong, Bangladesh, and grew up in New York, United States. After graduating from Townsend Harris High School, I decided to attend John Jay College (JJC) because I aspire to be a cyber-security professional and prevent cybercrime. Some of my strengths include being curious, accountable, and resilient. As I look forward to expanding my horizon and applying lessons learned in classrooms in real-life scenarios, my career aspiration will continue to lie in utilizing cyber-security to serve people around the world whether in the financial sector, preventing cyberattacks, or in the government sector, fighting cyberterrorism.
+                    As a former CUNY Tech Talent Pipeline Program participant, I developed web development and modifying skills. A cosmopolitan at heart and an aspiring adventurer, I was born in Chittagong, Bangladesh, and grew up in New York, United States. After graduating from Townsend Harris High School, I decided to attend John Jay College (JJC) because I aspire to be a cyber-security professional and prevent cybercrime. Some of my strengths include being curious, accountable, and resilient. As I look forward to expanding my horizon and applying lessons learned in classrooms in real-life scenarios, my career aspiration will continue to lie in utilizing cyber-security to serve people around the world whether in the financial sector, preventing cyberattacks, or in the government sector, fighting cyberterrorism.
 									</font> </p>
 
 									<ul class="about-us-list"> 
@@ -122,7 +122,7 @@ License: Creative Commons Attribution 3.0** - http://creativecommons.org/license
           <div class="service_block">
             
             <h3 class="animated fadeInUp wow"> <font color="#FFC000"> Resourceful </font> </h3>
-            <p class="animated fadeInDown wow"> I am always determined to deliver the results with coherence and use my thought-process to come up with a solution </p>
+            <p class="animated fadeInDown wow"> I am always determined to deliver the results with coherence and use my thought process to come up with a solution </p>
           </div>
         </div>
         <div class="col-md-3"> 
