--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			  <li><a href="#service" class="scroll-link">Skills</a></li>
 			  <li><a href="#portfolio" class="scroll-link">Publications</a></li>
 			  <li><a href="#experience" class="scroll-link">Specialty</a></li>
-			  <li><a href="#team" class="scroll-link">Testimonial</a></li>
+			  <li><a href="#team" class="scroll-link">Recommendations</a></li>
 			  <li><a href="#contact" class="scroll-link">Get In Touch</a></li>
 			</ul>
       </div>
@@ -362,7 +362,7 @@
 
 <section class="page_section team" id="team"><!--main-section team-start-->
   <div class="container">
-    <h2> <font color="#7B0323"> Testimonials </font> </h2>
+    <h2> <font color="#7B0323"> Recommendations </font> </h2>
 	  	
 		<div id="team" name="team">
   <div class="container">
@@ -375,7 +375,7 @@
        </div>
         <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/team01.jpg" height="120px" width="120px" alt="">
         <div class="rt-box"><h4><strong><font color="#000000">Mr. Douglas Salane</font></strong></h4>
-        <p><font color="#222222">The site is very impressive.  The visuals are appealing and lead you easily to the information.</font></p><br/>
+        <p><font color="#222222">The site is very impressive. The visuals are appealing and lead you easily to the information.</font></p><br/>
 		</div>
        </div>
 	      <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/team03.jpg" height="120px" width="120px" alt="">
@@ -412,11 +412,11 @@
                                 <p>Udipto.Chowdhury@jjay.cuny.edu</p>
                             </div> 
                         </div>
-          <ul class="social_links">
+          <ul class="references">
             <li class="linkedin animated bounceIn wow delay-01s"><a href="https://www.linkedin.com/in/udipto2000/"><i class="fa fa-linkedin"></i></a></li>
           </ul>
           <ul class="resume">
-            <li class="briefcase animated bounceIn wow fa-2x delay-02s"><a href="Udipto Chowdhury Resume 2025.pdf"><i class="fa fa-briefcase"></i></a></li> 
+             
           </ul>
 	  <ul class="cover letter">
             <li class="envelope animated bounceIn wow fa-2x delay-03s"><a href="Cover Letter_ Udipto Chowdhury.pdf"><i class="fa fa-envelope"></i></a></li> 
