--- a/index.html
+++ b/index.html
@@ -413,9 +413,9 @@
                             </div> 
                         </div>
           <ul class="references">
-            <li class="linkedin animated bounceIn wow fa-2x; color: Tomato; delay-01s"><a href="https://www.linkedin.com/in/udipto2000/"><i class="fa fa-linkedin"></i></a></li>
-	    <li class="briefcase animated bounceIn wow fa-2x delay-02s"><a href="Udipto Chowdhury Resume 2025.pdf"><i class="fa fa-briefcase"></i></a></li>
-	    <li class="envelope animated bounceIn wow fa-2x delay-03s"><a href="Cover Letter_ Udipto Chowdhury.pdf"><i class="fa fa-envelope"></i></a></li> 
+            <li class="linkedin animated bounceIn wow fa-2x delay-01s"><a href="https://www.linkedin.com/in/udipto2000/"><i class="fa fa-linkedin" style="color: white;"></i><i class="fa fa-linkedin"></i></a></li>
+	    <li class="briefcase animated bounceIn wow fa-2x delay-02s"><a href="Udipto Chowdhury Resume 2025.pdf"><i class="fa fa-briefcase" style="color: sky blue;"></i><i class="fa fa-briefcase"></i></a></li>
+	    <li class="envelope animated bounceIn wow fa-2x delay-03s"><a href="Cover Letter_ Udipto Chowdhury.pdf"><i class="fa fa-envelope" style="color: green;"></i><i class="fa fa-envelope"></i></a></li> 
           </ul>
         </div>
       </div>
