--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 			  <li class="active"><a href="#hero_section" class="scroll-link">Home</a></li>
 			  <li><a href="#aboutMe" class="scroll-link">About Me</a></li>
 			  <li><a href="#service" class="scroll-link">Skills</a></li>
-			  <li><a href="#portfolio" class="scroll-link">Publications</a></li>
-			  <li><a href="#experience" class="scroll-link">Specialty</a></li>
+			  <li><a href="#publications" class="scroll-link">Publications</a></li>
+			  <li><a href="#specialties" class="scroll-link">Specialty</a></li>
 			  <li><a href="#team" class="scroll-link">Recommendations</a></li>
 			  <li><a href="#contact" class="scroll-link">Get In Touch</a></li>
 			</ul>
@@ -152,7 +152,7 @@
 
 
 <!-- Portfolio -->
-<section id="Portfolio" class="content"> 
+<section id="publications" class="content"> 
   
   <!-- Container -->
   <div class="container portfolio_title"> 
@@ -342,7 +342,7 @@
 </section>
 <!--/Portfolio --> 
 
-<section class="page_section" id="clients"><!--page_section-->
+<section class="page_section" id="specialties"><!--page_section-->
   <h2> <font color="#000080"> Specialized in... </font> </h2>
 <!--page_section-->
 <div class="client_logos"><!--client_logos-->
