--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     
     <!-- Title -->
     <div class="section-title">
-      <h2> <font color="#228B22"> Publications </font> </h2>
+      <h2> <br/> <font color="#228B22"> Publications </font> </h2>
 	<h6> <font color="#000000"> These are my publications during my undergraduate and graduate studies </font> </h6>
 	  
     </div>
