--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
     <!--/Portfolio Filters --> 
     
     <!-- Portfolio Wrapper -->
-    <div class="isotope fadeInLeft animated wow grid" style="position: relative; overflow: hidden; height: 480px;" id="publications_wrapper">  
+    <div class="isotope fadeInLeft animated wow grid" style="position: relative; overflow: hidden; height: 480px;" id="portfolio_wrapper">  
       <!-- Portfolio Item -->
-      <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(674px, 240px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="publications-item one-four   761 isotope-item effect-oscar">
+      <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(674px, 240px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four   761 isotope-item effect-oscar">
 	   
         <div class="portfolio_img"> 
 		<img src="img/portfolio_pic1.jpg" alt="Portfolio 1" width=auto height=auto> </div> 
