--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			  <li class="active"><a href="#hero_section" class="scroll-link">Home</a></li>
 			  <li><a href="#aboutMe" class="scroll-link">About Me</a></li>
 			  <li><a href="#service" class="scroll-link">Skills</a></li>
-			  <li><a href="#publications" class="scroll-link">Publications</a></li>
+			  <li><a href="#portfolio" class="scroll-link">Publications</a></li>
 			  <li><a href="#specialties" class="scroll-link">Specialty</a></li>
 			  <li><a href="#team" class="scroll-link">Recommendations</a></li>
 			  <li><a href="#contact" class="scroll-link">Get In Touch</a></li>
@@ -152,10 +152,10 @@
 
 
 <!-- Portfolio -->
-<section id="publications" class="content"> 
+<section id="portfolio" class="content"> 
   
   <!-- Container -->
-  <div class="container publications_title"> 
+  <div class="container portfolio_title"> 
     
     <!-- Title -->
     <div class="section-title">
@@ -168,10 +168,10 @@
   </div>
   <!-- Container -->
   
-  <div class="publications-top"></div>
+  <div class="portfolio-top"></div>
   
   <!-- Portfolio Filters -->
-  <div class="publications"> 
+  <div class="portfolio"> 
     
     <div id="filters" class="sixteen columns">
       <ul class="clearfix">
