--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			  <li><a href="#aboutMe" class="scroll-link">About Me</a></li>
 			  <li><a href="#service" class="scroll-link">Skills</a></li>
 			  <li><a href="#portfolio" class="scroll-link">Publications</a></li>
-			  <li><a href="#specialties" class="scroll-link">Specialty</a></li>
+			  <li><a href="#specialty" class="scroll-link">Specialty</a></li>
 			  <li><a href="#team" class="scroll-link">Recommendations</a></li>
 			  <li><a href="#contact" class="scroll-link">Get In Touch</a></li>
 			</ul>
@@ -342,7 +342,7 @@
 </section>
 <!--/Portfolio --> 
 
-<section class="page_section" id="specialties"><!--page_section-->
+<section class="page_section" id="specialty"><!--page_section-->
   <h2> <font color="#000080"> Specialized in... </font> </h2>
 <!--page_section-->
 <div class="client_logos"><!--client_logos-->
