--- a/index.html
+++ b/index.html
@@ -341,12 +341,12 @@
   
 </section>
 <!--/Portfolio --> 
-
-<section class="page_section" id="specialty"><!--page_section-->
-  <h2> <font color="#000080"> Specialized in... </font> </h2>
+	
 <!--page_section-->
+<section class="page_section" id="specialty">
 <div class="client_logos"><!--client_logos-->
   <div class="container">
+	    <h2> <font color="#000080"> Specialized in... </font> </h2>
     <ul class="fadeInRight animated wow">
       <li><a href="javascript:void(0)"><img src="img/client_logo2.png" alt=""></a></li>
       <li><a href="javascript:void(0)"><img src="img/client_logo3.png" alt=""></a></li>
