--- a/index.html
+++ b/index.html
@@ -67,11 +67,12 @@
 </header>
 <!--Header_section--> 
 
-<section id="aboutMe"><!--AboutMe-->
+<!--AboutMe--> 
+<section id="aboutMe">
 <div class="inner_wrapper aboutMe-container fadeInLeft animated wow">
   <div class="container">
     <h2><br/> <font color="#FF2400"> Who Am I? </font> </h2>
-	<h6> <font color="#000000"> I am a current John Jay College Graduate Student who is majoring in Digital Forensics and Cybersecurity </font> </h6>
+	<h6> <font color="#000000"> I am a John Jay College Graduate Student who majored in Digital Forensics and Cybersecurity </font> </h6>
     <div class="inner_section"> 
 	  <div class="row">
 						<div class="col-lg-12 about-us">
@@ -81,7 +82,7 @@
                   
 									<h3> <font color="#880808"> I am a Soon-To-Be Cybersecurity Specialist </font> </h3>
 									<p> <font color="#000000">
-                    As a recent Per Scholas student, I developed my cybersecurity, web development, and modification skills. A cosmopolitan at heart and an aspiring adventurer, I was born in Chittagong, Bangladesh, and grew up in New York, United States. After graduating from Townsend Harris High School, I decided to attend John Jay College (JJC) because I aspire to be a cyber-security professional and prevent the ongoing cybercrime that is happening right now. Some of my strengths include being curious, accountable, and resilient. As I look forward to expanding my horizon and applying lessons learned in classrooms in real-life scenarios, my career aspiration will continue to lie in utilizing cyber-security to serve people around the world whether in the financial sector, preventing cyberattacks, or in the government sector, fighting cyberterrorism.
+                    As a recent Per Scholas student, I developed my cybersecurity, web development, and modification skills. A cosmopolitan at heart and an aspiring adventurer, I was born in Chittagong, Bangladesh, and grew up in New York City. After graduating from Townsend Harris High School, I decided to attend John Jay College (JJC) because I aspire to be a cyber-security professional and prevent the ongoing cybercrime that is happening right now. Some of my strengths include being curious, accountable, and resilient. As I look forward to expanding my horizons and applying lessons learned in classrooms in real-life scenarios, my career aspiration will continue to lie in utilizing cyber-security to serve people around the world whether in the financial sector: preventing cyberattacks, or in the government sector: fighting cyberterrorism.
 									</font> </p>
 
 									<ul class="about-us-list"> 
@@ -101,7 +102,7 @@
   </div> 
   </div>
 </section>
-<!--AboutMe--> 
+
 
 
 <!--Service-->
@@ -346,7 +347,7 @@
 <section class="page_section" id="specialty">
 <div class="client_logos"><!--client_logos-->
   <div class="container">
-	    <h2> <font color="#000080"> Specialized in... </font> </h2>
+	    <h2> <font color="#FF69B4"> Specialized in... </font> </h2>
     <ul class="fadeInRight animated wow">
       <li><a href="javascript:void(0)"><img src="img/client_logo2.png" alt=""></a></li>
       <li><a href="javascript:void(0)"><img src="img/client_logo3.png" alt=""></a></li>
