--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <h2>Hello, my name is Udipto<br> <strong>I <i class="fa fa-heart"></i> <i class="fa fa-desktop"></i> </strong></h2>
 
                 <div class="underline"></div>             
-              <a href="#aboutMe" class="read_more2">Who Am I?</a> </div>
+              <a href="#aboutMe">Who Am I?</a> </div>
           </div> 
         </div>
       </div>
