--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <h2>Hello, my name is Udipto<br> <strong>I <i class="fa fa-heart"></i> <i class="fa fa-desktop"></i> </strong></h2>
 
                 <div class="underline"></div>             
-              <a href="#aboutMe" class="read_more1">Who Am I?</a> </div>
+              <a href="#aboutMe" class="read_more2">Who Am I?</a> </div>
           </div> 
         </div>
       </div>
@@ -71,7 +71,7 @@
 <section id="aboutMe">
 <div class="inner_wrapper aboutMe-container fadeInLeft animated wow">
   <div class="container">
-    <h2><br/> <font color="#FF2400"> Who Am I? </font> </h2>
+    <h2><br><br/> <font color="#FF2400"> Who Am I? </font> </h2>
 	<h6> <font color="#000000"> I am a John Jay College Graduate Student who majored in Digital Forensics and Cybersecurity </font> </h6>
     <div class="inner_section"> 
 	  <div class="row">
