--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                   
 									<h3> <font color="#880808"> I am a Soon-To-Be Cybersecurity Specialist </font> </h3>
 									<p> <font color="#000000">
-                    As a recent Per Scholas student, I developed my cybersecurity, web development, and modification skills. A cosmopolitan at heart and an aspiring adventurer, I was born in Chittagong, Bangladesh, and grew up in New York City. After graduating from Townsend Harris High School, I decided to attend John Jay College (JJC) because I aspire to be a cyber-security professional and prevent the ongoing cybercrime that is happening right now. Some of my strengths include being curious, accountable, and resilient. As I look forward to expanding my horizons and applying lessons learned in classrooms in real-life scenarios, my career aspiration will continue to lie in utilizing cyber-security to serve people around the world whether in the financial sector: preventing cyberattacks, or in the government sector: fighting cyberterrorism.
+                    As a recent Per Scholas student, I developed my skills in cybersecurity, web development, and software modification. A cosmopolitan at heart and an aspiring adventurer, I was born in Chittagong, Bangladesh, and grew up in New York City. After graduating from Townsend Harris High School, I decided to attend John Jay College (JJC) because I aspire to be a cyber-security professional and prevent the ongoing cybercrime that is happening right now. Some of my strengths include being curious, accountable, and resilient. As I look forward to expanding my horizons and applying lessons learned in classrooms in real-life scenarios, my career aspiration will continue to lie in utilizing cyber-security to serve people around the world whether in the financial sector: preventing cyberattacks, or in the government sector: fighting cyberterrorism.
 									</font> </p>
 
 									<ul class="about-us-list"> 
@@ -370,7 +370,7 @@
       
       	<div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/team01.jpg" height="120px" width="120px" alt="">
         <div class="rt-box"><h4><strong><font color="#000000"> Mr. Wilmer Udama </font></strong></h4>
-        <p><font color="#222222">...While in class, he understood complex subjects. Such as, Cryptography, network protocols, apply new concepts during the semester. Also, he was humble and maintained a positive attitude during class. Additionally, he demonstrated attention to detail, neatness, and professionalism in his class work, making it a pleasure to review his assignments.</font></p><br/>
+        <p><font color="#222222">...While in class, he understood complex subjects. Such as Cryptography, network protocols, and applying new concepts during the semester. Also, he was humble and maintained a positive attitude during class. Additionally, he demonstrated attention to detail, neatness, and professionalism in his class work, making it a pleasure to review his assignments.</font></p><br/>
 		</div>
        </div>
         <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/team01.jpg" height="120px" width="120px" alt="">
@@ -379,12 +379,12 @@
 		</div>
        </div>
 	      <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/team03.jpg" height="120px" width="120px" alt="">
-        <div class="rt-box"><h4><strong>Fsdf Efffl</strong></h4>
+        <div class="rt-box"><h4><strong>Mr. Ipsum</strong></h4>
         <p>Lorem ipsum dolor sit amet, consectetur Morbi sagittis, sem quisci ipsum gravida tortor.</p><br/>
 		</div>
        </div>
 	      <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/team04.jpg" height="120px" width="120px" alt="">
-        <div class="rt-box"><h4><strong>Mnin Nulk</strong></h4>
+        <div class="rt-box"><h4><strong>Mr. Lorem</strong></h4>
         <p>Lorem ipsum dolor sit amet, consectetur Morbi sagittis, sem quisci ipsum gravida tortor.</p><br/>
 		</div>
        </div>
@@ -415,7 +415,8 @@
           <ul class="references">
             <li class="linkedin animated bounceIn wow fa-2x delay-01s"><a href="https://www.linkedin.com/in/udipto2000/"><i class="fa fa-linkedin" style="color: white;"></i></a></li>
 	    <li class="briefcase animated bounceIn wow fa-2x delay-02s"><a href="Udipto Chowdhury Resume 2025.pdf"><i class="fa fa-briefcase" style="color: sky blue;"></i></a></li>
-	    <li class="envelope animated bounceIn wow fa-2x delay-03s"><a href="Cover Letter_ Udipto Chowdhury.pdf"><i class="fa fa-envelope" style="color: green;"></i></a></li> 
+	    <li class="pen-nib animated bounceIn wow fa-2x delay-03s"><a href="Udipto Chowdhury Technical Resume 2025.pdf"><i class="fa fa-pen-nib" style="color: magenta;"></i></a></li>
+	    <li class="file animated bounceIn wow fa-2x delay-04s"><a href="Cover Letter_ Udipto Chowdhury.pdf"><i class="fa fa-file" style="color: green;"></i></a></li> 
           </ul>
         </div>
       </div>
