--- a/index.html
+++ b/index.html
@@ -409,13 +409,13 @@
 		 <div class="contact_info">
                             <div class="detail">
                                 <h4><font color="#F4BB44">E-mail</font></h4>
-                                <p>Udipto.Chowdhury@jjay.cuny.edu</p>
+                                <p>Udipto2000@gmail.com</p>
                             </div> 
                         </div>
           <ul class="references">
             <li class="linkedin animated bounceIn wow fa-2x delay-01s"><a href="https://www.linkedin.com/in/udipto2000/"><i class="fa fa-linkedin" style="color: white;"></i></a></li>
 	    <li class="briefcase animated bounceIn wow fa-2x delay-02s"><a href="Udipto Chowdhury Resume 2025.pdf"><i class="fa fa-briefcase" style="color: sky blue;"></i></a></li>
-	    <li class="pen-nib animated bounceIn wow fa-2x delay-03s"><a href="Udipto Chowdhury Technical Resume 2025.pdf"><i class="fa fa-pen-nib" style="color: orange;"></i></a></li>
+	    <li class="key animated bounceIn wow fa-2x delay-03s"><a href="Udipto Chowdhury Technical Resume 2025.pdf"><i class="fa fa-key" style="color: orange;"></i></a></li>
 	    <li class="file animated bounceIn wow fa-2x delay-04s"><a href="Cover Letter_ Udipto Chowdhury.pdf"><i class="fa fa-file" style="color: green;"></i></a></li> 
           </ul>
         </div>
