--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <section id="aboutMe">
 <div class="inner_wrapper aboutMe-container fadeInLeft animated wow">
   <div class="container">
-    <h2><br><br/><br/> <font color="#FF2400"> Who Am I? </font> </h2>
+    <h2><br><br/><br/><font color="#FF2400"> Who Am I? </font></h2>
 	<h6> <font color="#000000"> I am a John Jay College Graduate Student who majored in Digital Forensics and Cybersecurity </font> </h6>
     <div class="inner_section"> 
 	  <div class="row">
@@ -81,7 +81,7 @@
                   
 									<h3> <font color="#880808"> I am a Soon-To-Be Cybersecurity Specialist </font> </h3>
 									<p> <font color="#000000">
-                    As a recent Per Scholas student, I developed my skills in cybersecurity, web development, and software modification. A cosmopolitan at heart and an aspiring adventurer, I was born in Chittagong, Bangladesh, and grew up in New York City. After graduating from Townsend Harris High School, I decided to attend John Jay College (JJC) because I aspire to be a cyber-security professional and prevent the ongoing cybercrime that is happening right now. Some of my strengths include being curious, accountable, and resilient. As I look forward to expanding my horizons and applying lessons learned in classrooms in real-life scenarios, my career aspiration will continue to lie in utilizing cyber-security to serve people around the world whether in the financial sector: preventing cyberattacks, or in the government sector: fighting cyberterrorism.
+                    As a recent Per Scholas student, I developed my skills in cybersecurity, web development, and software modification. A cosmopolitan at heart and an aspiring adventurer, I was born in Chittagong, Bangladesh, and grew up in New York City. After graduating from Townsend Harris High School, I decided to attend John Jay College (JJC) because I aspire to be a cybersecurity professional and help prevent the ongoing cybercrime that is currently happening. Some of my strengths include being curious, accountable, and resilient. As I look forward to expanding my horizons and applying lessons learned in classrooms to real-life scenarios, my career aspiration will continue to lie in utilizing cybersecurity to serve people around the world, whether in the financial sector by preventing cyberattacks or in the government sector by fighting cyberterrorism.
 									</font> </p>
 
 									<ul class="about-us-list"> 
@@ -97,7 +97,7 @@
 						</div><!-- /.col-lg-12 -->
 					</div>
       
-    </div>
+  </div>
   </div> 
   </div>
 </section>
