--- a/index.html
+++ b/index.html
@@ -368,22 +368,22 @@
   <div class="container">
     <div class="row centered">
       
-      	<div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/team01.jpg" height="120px" width="120px" alt="">
+      	<div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/wumana.jpeg" height="120px" width="120px" alt="">
         <div class="rt-box"><h4><strong><font color="#000000"> Mr. Udama </font></strong></h4>
         <p><font color="#222222">...While in class, he understood complex subjects. Such as Cryptography, network protocols, and applying new concepts during the semester. Also, he was humble and maintained a positive attitude during class. Additionally, he demonstrated attention to detail, neatness, and professionalism in his class work, making it a pleasure to review his assignments.</font></p><br/>
 		</div>
        </div>
-        <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/team01.jpg" height="120px" width="120px" alt="">
+        <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/dsalane.jpg" height="120px" width="120px" alt="">
         <div class="rt-box"><h4><strong><font color="#000000">Mr. Salane</font></strong></h4>
         <p><font color="#222222">The site is very impressive. The visuals are appealing and lead you easily to the information.</font></p><br/>
 		</div>
        </div>
-	      <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/team03.jpg" height="120px" width="120px" alt="">
+	      <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/geoff.jpg" height="120px" width="120px" alt="">
         <div class="rt-box"><h4><strong><font color="#000000">Mr. Geoff </strong></h4>
         <p><font color="#222222">...It's clean and well laid-out, easy and intuitive to navigate...</p><br/>
 		</div>
        </div>
-	      <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/team02.jpg" height="120px" width="120px" alt="">
+	      <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/dblake.jpg" height="120px" width="120px" alt="">
         <div class="rt-box"><h4><strong><font color="#000000">Ms. Blake </strong></h4>
         <p><font color="#222222">I had a chance to check out your website, and I just wanted to say it looks fantastic. The design is clean, well-organized, and reflects your personality. I’m sure recruiters and anyone you network with will find it impressive and engaging.</p><br/>
 		</div>
