--- a/index.html
+++ b/index.html
@@ -378,12 +378,12 @@
         <p><font color="#222222">The site is very impressive. The visuals are appealing and lead you easily to the information.</font></p><br/>
 		</div>
        </div>
-	      <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/geoff.jpg" height="120px" width="120px" alt="">
+	      <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/geoff.jpeg" height="120px" width="120px" alt="">
         <div class="rt-box"><h4><strong><font color="#000000">Mr. Geoff </strong></h4>
         <p><font color="#222222">...It's clean and well laid-out, easy and intuitive to navigate...</p><br/>
 		</div>
        </div>
-	      <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/dblake.jpg" height="120px" width="120px" alt="">
+	      <div class="col-md-3 centered"> <img class="img img-circle lt-box" src="img/dblake.jpeg" height="120px" width="120px" alt="">
         <div class="rt-box"><h4><strong><font color="#000000">Ms. Blake </strong></h4>
         <p><font color="#222222">I had a chance to check out your website, and I just wanted to say it looks fantastic. The design is clean, well-organized, and reflects your personality. I’m sure recruiters and anyone you network with will find it impressive and engaging.</p><br/>
 		</div>
