--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	  <div class="row">
 						<div class="col-lg-12 about-us">
 							<div class="row">
-							<div class="col-md-6"> <img class="img-responsive" src="img/PXL_20220511_174323746.jpg" align=""> </div><!-- /.col-md-6 -->
+							<div class="col-md-6"> <img class="img-responsive" src="img/20240523_161632.jpg" align=""> </div><!-- /.col-md-6 -->
 								<div class="col-md-6">
                   
 									<h3> <font color="#880808"> I am a Soon-To-Be Cybersecurity Specialist </font> </h3>
