--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <!-- Title -->
     <div class="section-title">
       <h2> <br/> <font color="#228B22"> Publications </font> </h2>
-	<h6> <font color="#000000"> These are my publications during my undergraduate and graduate studies </font> </h6>
+	<h6> <font color="#000000"> These are my publications during my undergraduate and graduate studies as well as the websites I have worked with... </font> </h6>
 	  
     </div>
     <!--/Title --> 
@@ -182,7 +182,7 @@
           <h5>FCM 761: Cyber Risk Assessment & Management</h5>
           </a></li>
         <li><a class="" href="#" data-filter=".230">
-          <h5>ANT 230: Culture & Crime</h5>
+          <h5>MacGuyverTech Websites</h5>
           </a></li>
         <li><a class="" href="#" data-filter=".401">
           <h5>CSCI 401: Capstone Experience in Digital Forensics/Cybersecurity II</h5>
@@ -219,8 +219,8 @@
         <div class="portfolio_img"> <img src="img/portfolio_pic2.jpg" alt="Portfolio 2"> </div>
         	<figcaption>		
 				<div>
-				  <a href="Chowdhury, Udipto -ANT230-01 3rd Expository Essay.docx" class="fancybox"> 
-					<h2>Essay <span>2</span></h2>
+				  <a href="https://imaginelifestyles.com/" class="fancybox"> 
+					<h2>ImagineLifestyles</h2>
 				  </a>
 				</div>
 			</figcaption>
