--- a/index.html
+++ b/index.html
@@ -215,12 +215,12 @@
       <!--/Portfolio Item --> 
       
       <!-- Portfolio Item-->
-      <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(337px, 500px, 0px) scale3d(1, 1, 1); width: 200px; opacity: 1;" class="portfolio-item one-four 230 isotope-item effect-oscar">
+      <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(337px, 500px, 0px) scale3d(1, 1, 1); width: 200px; opacity: .5;" class="portfolio-item one-four 230 isotope-item effect-oscar">
         <div class="portfolio_img"> <img src="img/portfolio_pic2.jpg" alt="Portfolio 2"> </div>
         	<figcaption>		
 				<div>
 				  <a href="https://imaginelifestyles.com/" class="fancybox"> 
-					<h2><small>ImagineLifestyles</small></h2>
+					<h2><small><p style="color: white;">ImagineLifestyles</p></small></h2>
 				  </a>
 				</div>
 			</figcaption>
